# oModel

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRACTS.md  DESIGN.md  GLOSSARY.md  LICENSE  NOTICE  README.md  install.sh  pyproject.toml
.github/workflows/: ci.yml  refresh-suggestions.yml  release.yml
src/omodel/: __init__.py  __main__.py  app.py  cache.py  catalog.py  cli.py  config_io.py  history.py  refresh.py  resolve.py  suggestions.py
src/omodel/data/: __init__.py  default-config.jsonc  omo-suggestions.json
src/omodel/tools/: __init__.py  snapshot_omo.ts
tests/: _helpers.py  conftest.py  test_app_pilot.py  test_cache.py  test_catalog_parse.py  test_cli.py  test_config_io.py  test_detect_family.py  test_history.py  test_refresh.py  test_resolve.py  verification.md
