# pyproject.toml — owned by the CLI+packaging specialist (final version).
# Textual pin: installed textual==8.2.7, requires-python ">=3.9,<4.0".
# Our floor stays at 3.9 — textual's constraint is satisfied.
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "omodel"
version = "0.2.0"
description = "A small TUI to help set OMO (oh-my-openagent) models"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "zhoufanscut" }]
keywords = ["tui", "opencode", "oh-my-openagent", "omo", "ai", "models"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Utilities",
]
dependencies = [
  # Pin at lock time: textual 8.2.7 requires-python ">=3.9,<4.0" — matches our 3.9 floor.
  "textual==8.2.7",
  "json5",
]

[project.optional-dependencies]
# ruff is capped: the repo lints on ruff's DEFAULT rule set (AGENTS.md — no [tool.ruff]
# config), so a release that widens those defaults retroactively reds CI on untouched
# code. 0.16.0 did exactly that (I001/UP045/SIM117/RUF012/BLE001/… — 141 findings on a
# clean tree, many of them UP045 `X | None` rewrites this project's 3.9 floor resists).
# Lift the cap in its own change, once those findings are triaged rather than in passing.
dev = ["pytest", "ruff>=0.15,<0.16"]

[project.scripts]
omodel = "omodel.cli:main"

[project.urls]
Homepage = "https://github.com/zhoufanscut/oModel"
Repository = "https://github.com/zhoufanscut/oModel"
Changelog = "https://github.com/zhoufanscut/oModel/blob/main/CHANGELOG.md"

[tool.hatch.build.targets.wheel]
packages = ["src/omodel"]
# Non-Python payload (data/*.json,*.jsonc + tools/*.ts) ships automatically because it lives
# under the package tree; importlib.resources reads it (incl. when frozen by PyInstaller).
# NB: do NOT add a force-include for data/tools — it duplicates those paths and fails the build
# ("A second file is being added to the wheel archive at the same path").

[tool.hatch.build.targets.sdist]
include = [
  "src/",
  "README.md",
  "LICENSE",
  "NOTICE",
  "CHANGELOG.md",
  "pyproject.toml",
]
