# pyproject.toml — owned by the CLI+packaging specialist (final version).
# Textual pin: installed textual==8.2.7, requires-python ">=3.9,<4.0".
# Our floor stays at 3.9 — textual's constraint is satisfied.
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "omodel"
version = "0.2.0"
description = "A small TUI to help set OMO (oh-my-openagent) models"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "zhoufanscut" }]
keywords = ["tui", "opencode", "oh-my-openagent", "omo", "ai", "models"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Utilities",
]
dependencies = [
  # Pin at lock time: textual 8.2.7 requires-python ">=3.9,<4.0" — matches our 3.9 floor.
  "textual==8.2.7",
  "json5",
]

[project.optional-dependencies]
dev = ["pytest", "ruff>=0.16"]

[project.scripts]
omodel = "omodel.cli:main"

[project.urls]
Homepage = "https://github.com/zhoufanscut/oModel"
Repository = "https://github.com/zhoufanscut/oModel"
Changelog = "https://github.com/zhoufanscut/oModel/blob/main/CHANGELOG.md"

[tool.hatch.build.targets.wheel]
packages = ["src/omodel"]
# Non-Python payload (data/*.json,*.jsonc + tools/*.ts) ships automatically because it lives
# under the package tree; importlib.resources reads it (incl. when frozen by PyInstaller).
# NB: do NOT add a force-include for data/tools — it duplicates those paths and fails the build
# ("A second file is being added to the wheel archive at the same path").

[tool.hatch.build.targets.sdist]
include = [
  "src/",
  "README.md",
  "LICENSE",
  "NOTICE",
  "CHANGELOG.md",
  "pyproject.toml",
]

# ---------------------------------------------------------------------------
# Lint
# ---------------------------------------------------------------------------
# Runs on ruff's DEFAULT rule set (413 rules as of 0.16) minus the exclusions below. Each
# one is a design decision, not a backlog item — if you are adding to this list, say why.
#
# Note the residual risk this config does NOT remove: ruff may widen its defaults again
# (0.16 took them from ~60 rules to 413, which retroactively reddened a clean tree). That
# is the cost of tracking defaults instead of pinning an explicit `select`; the upside is
# new checks arrive for free. If a future widening is unwelcome, cap the version in `dev`
# rather than freezing a 413-entry select list.
[tool.ruff.lint]
ignore = [
  # Graceful degradation is load-bearing here (AGENTS.md): a missing `opencode`, a corrupt
  # cache, an unparseable config or a failed resolver must each leave a working app rather
  # than a traceback — `--check` is contractually exit-0 even when everything is broken. The
  # 14 sites are all boundary catches of exactly that kind, several already commented as
  # such. Narrowing them per-site would mean 14 noqa lines restating one design rule.
  "BLE001",
  # Combining nested `with` into one statement needs parenthesized context managers (3.10+).
  # The floor is 3.9, so the only conforming rewrite is a single over-long line. This is the
  # one rule the floor genuinely blocks — revisit if the floor ever rises.
  "SIM117",
]

[tool.ruff.lint.per-file-ignores]
# Pilot tests read small fixture files inside async test bodies. The blocking call is the
# point (deterministic ordering against the Textual pilot); there is no server loop to starve.
"tests/*" = ["ASYNC230"]
